# ring-buffer

./: .gitignore  CMakeLists.txt  README.md  README.rst  ring_buffer_version.in
cmake/targets/: ring_buffer_example.cmake  ring_buffer_test.cmake  ring_buffer_test_multithread.cmake
cmake/tools/: clang_sanitizer.cmake  clang_tidy.cmake  git.cmake  googletest.cmake  test.cmake  version.cmake
examples/: example.c
include/ring_buffer/: ring_buffer.h  ring_buffer_version.h
src/: ring_buffer.c
test/: tring_buffer.c
test_mt/: tring_buffer_multithread.cpp
